--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-TOKEN=OTQwNTk3OTg0MzU2MzY0Mjk4.YgJuIg.lvEfbcr4UxMS2ye4NeGO5kMtQXM
-DATABASE_HOST=127.0.0.1
-DATABASE_USER=root
-DATABASE_PASSWORD=root
-DATABASE_NAME=discord
+TOKEN=
+DATABASE_HOST=
+DATABASE_USER=
+DATABASE_PASSWORD=
+DATABASE_NAME=
